infrastructure/authelia/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-svc
  namespace: authelia
spec:
  selector:
    app: authelia
  ports:
  - name: http
    port: 80
    targetPort: 9091
  type: ClusterIP
