infrastructure/authelia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: "selfsigned-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - auth.bh.zz
    secretName: authelia-tls
  rules:
  - host: auth.bh.zz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authelia-svc
            port:
              number: 80
